--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,21 +18,22 @@ addopts=[
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 pytest = "^8.3.2"
 pika = "^1.3.2"
 websockets = "^12.0"
 fastapi = {extras = ["standard"], version = "^0.112.0"}
 httpx = "^0.27.0"
 coverage = "^7.6.1"
-flask = "^3.0.3"
+flask = "2.2.5"
 flask-restful = "^0.3.10"
 pydantic-settings = "^2.4.0"
 asyncio = "^3.4.3"
-flask-sqlalchemy = "^3.1.1"
+flask-sqlalchemy = "2.5.1"
 mysql-connector-python = "^9.0.0"
-sqlalchemy = "^2.0.32"
+sqlalchemy = "1.4.54"
 flake8 = "^7.1.1"
+apache-airflow = "^2.10.5"
 
 [tool.poetry.group.jupyter.dependencies]
 matplotlib = "^3.9.2"
