--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ mysql-connector-python = "^9.0.0"
 sqlalchemy = "1.4.54"
 flake8 = "^7.1.1"
 apache-airflow = {extras = ["cncf-kubernetes"], version = "^2.10.5"}
+pydantic = "^2.10.6"
 
 [tool.poetry.group.jupyter.dependencies]
 matplotlib = "^3.9.2"
