--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,17 @@ coverage.*
 *.log
 
 .venv
+
+# airflow
+
+.git
+.env
+.DS_Store
+airflow_settings.yaml
+__pycache__/
+astro
+.venv
+airflow-webserver.pid
+webserver_config.py
+airflow.cfg
+airflow.db
